# 2026-_0707

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: research_task.md
configs/datasets/: openood_cifar10_v1_5.yaml
configs/evaluation/: msp_smoke.yaml
configs/models/: wrn28_10.yaml  wrn28_10_dropout.yaml
configs/studies/wrn28_10_optimizer_hpo_v1_1/: study.yaml
configs/training/: cifar10_wrn28_10.yaml
docs/: PROJECT_CONTEXT.md  STATUS.md  WORKFLOW.md  sources.lock.yaml
docs/reference_cards/: 01_optimizers.md  02_architectures.md  03_architecture_implementation_checklist.md  04_openood_v1_5_protocol.md  05_training_protocol.md  06_feature_ood_detectors.md  07_optimizer_comparison_hpo_protocol.md  08_raw_feature_artifact_contract.md  09_core_representation_metrics.md
docs/validation/: issue10_cifar_training_server_validation.md  issue14_wrn200_sgd_seed0_server_validation.md  issue22_optimizer_hpo_orchestration_server_validation.md  issue6_openood_cifar10_server_validation.md
scripts/: eval_ood_smoke.py  run_optimizer_study.py  train_cifar10.py  verify_openood_data.py
src/oge/: __init__.py
src/oge/data/: __init__.py  manifest.py  (+3 more)
tests/: test_imglist_dataset.py  test_model_api.py  test_msp_evaluator.py  test_ood_metrics.py  test_openood_split_manifest.py  test_openood_transforms.py  test_optimizers.py  test_param_groups.py  test_study_hashing.py  test_study_orchestration.py  test_study_protocol.py  test_study_selection.py  test_training_engine.py  test_training_resume.py  test_wide_resnet.py
(+33 files in other folders)
