[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oge"
version = "0.1.0"
description = "Optimizer geometry experiment utilities"
requires-python = ">=3.10"
dependencies = ["torch", "pytest", "pyyaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
